# docs/swagger.yaml
@@ -395,8 +395,24 @@ paths:
       tags:
       - 广告管理
     get:
-      description: 分页查询文章列表，支持根据标题条件筛选
+      description: 分页查询广告列表，支持根据标题、链接等条件筛选
       parameters:
+      - description: 标题筛选（模糊匹配）
+        in: query
+        name: title
+        type: string
+      - description: 链接筛选（模糊匹配）
+        in: query
+        name: href
+        type: string
+      - description: 图片筛选（模糊匹配）
+        in: query
+        name: images
+        type: string
+      - description: 是否展示（true/false）
+        in: query
+        name: is_show
+        type: boolean
       - description: 页码，默认1
         in: query
         name: page
@@ -430,9 +446,9 @@ paths:
           description: 服务器内部错误
           schema:
             $ref: '#/definitions/res.Response'
-      summary: 获取文章列表
+      summary: 获取广告列表
       tags:
-      - 文章管理
+      - 广告管理
     post:
       consumes:
       - application/json
@@ -511,6 +527,45 @@ paths:
       tags:
       - 广告管理
   /api/articles:
+    get:
+      description: 分页查询文章列表，支持根据标题条件筛选
+      parameters:
+      - description: 页码，默认1
+        in: query
+        name: page
+        type: integer
+      - description: 每页条数，默认10
+        in: query
+        name: limit
+        type: integer
+      - description: 用户认证令牌
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/res.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/res.DataListResponse'
+              type: object
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/res.Response'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/res.Response'
+      summary: 获取文章列表
+      tags:
+      - 文章管理
     post:
       consumes:
       - application/json
@@ -542,6 +597,137 @@ paths:
           schema:
             $ref: '#/definitions/res.Response'
       summary: 添加文章
+      tags:
+      - 文章管理
+  /api/articles/:id:
+    get:
+      description: 文章细节查看 by id
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 用户认证令牌
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/res.Response'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/res.Response'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/res.Response'
+      summary: 文章细节查看 by id
+      tags:
+      - 文章管理
+  /api/articles/calendar:
+    get:
+      description: 获取文章日历
+      parameters:
+      - description: 用户认证令牌
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/res.Response'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/res.Response'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/res.Response'
+      summary: 获取文章日历
+      tags:
+      - 文章管理
+  /api/articles/tags:
+    get:
+      description: 分页查询文章标签列表
+      parameters:
+      - description: 页码，默认1
+        in: query
+        name: page
+        type: integer
+      - description: 每页条数，默认10
+        in: query
+        name: limit
+        type: integer
+      - description: 用户认证令牌
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/res.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/res.DataListResponse'
+              type: object
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/res.Response'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/res.Response'
+      summary: 文章标签列表
+      tags:
+      - 文章管理
+  /api/articles_detail_title:
+    get:
+      description: 文章细节查看 by title
+      parameters:
+      - description: 文章标题
+        in: query
+        name: title
+        required: true
+        type: string
+      - description: 用户认证令牌
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/res.Response'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/res.Response'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/res.Response'
+      summary: 文章细节查看 by title
       tags:
       - 文章管理
   /api/email_login:
